--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#home">Shiven Patel</a>
+                <a href="#home">S.</a>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Professional Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -34,49 +35,58 @@
     <!-- Hero Section -->
     <section id="home">
         <div class="hero-content">
-            <h1>Shiven Patel</h1>
-            <p>Innovative Designer & Developer</p>
-            <a href="#portfolio" class="cta-button">View My Work</a>
+            <h1>Welcome to Shiven Patel's Portfolio</h1>
+            <p>"Innovation distinguishes between a leader and a follower." - Steve Jobs</p>
+            <a href="#projects" class="cta-button">View Works</a>
+            <div class="website-motion">shivenhpatel.com</div>
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <img src="IMG_4210.JPG" alt="Shiven Patel" class="profile-img">
-            <p>I am a senior CS major passionate about software development, with experience in web design and application development.</p>
+    <!-- Education Section -->
+    <section id="education">
+        <h2>Education</h2>
+        <p><strong>Temple University - College of Science and Technology</strong></p>
+        <p>Bachelor of Science in Computer Science with Minor in Mathematics</p>
+        <p>CGPA: 3.38 / 4.00 | Expected Graduation: May 2026</p>
+    </section>
+
+    <!-- Professional Experience Section -->
+    <section id="experience">
+        <h2>Professional Experience</h2>
+        <div class="experience-container">
+            <div class="experience">
+                <h3>Web Development Intern - Mainline Surgical Center</h3>
+                <p><strong>May 2024 - Sep 2024</strong></p>
+                <ul>
+                    <li>Designed and implemented responsive websites using HTML5, CSS3, and JavaScript.</li>
+                    <li>Automated email workflows using Java, reducing manual processing time by 50%.</li>
+                    <li>Contributed to an EHR system for a surgical clinic using Java and MySQL.</li>
+                </ul>
+            </div>
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portfolio">
-        <h2>My Work</h2>
-        <div class="portfolio-gallery">
-            <div class="portfolio-item">
-                <img src="images/project1.jpg" alt="Project 1">
-                <h3>Verbo Vista</h3>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="projects-container">
+            <div class="project">
+                <h3>Cyber Security Simulation Platform</h3>
+                <p>Developed a cybersecurity simulation platform using Python and Flask to help users practice real-world threat scenarios.</p>
             </div>
-            <div class="portfolio-item">
-                <img src="images/project2.jpg" alt="Project 2">
-                <h3>Data Visualization Dashboard</h3>
+            <div class="project">
+                <h3>Real-Time Data Visualization Dashboard</h3>
+                <p>Built a full-stack web app with React, D3.js, Node.js, and MongoDB for real-time data updates.</p>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services">
-        <h2>My Services</h2>
-        <div class="services-container">
-            <div class="service">
-                <i class="fas fa-code"></i>
-                <h3>Web Development</h3>
-            </div>
-            <div class="service">
-                <i class="fas fa-paint-brush"></i>
-                <h3>UI/UX Design</h3>
-            </div>
-        </div>
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>Programming Languages: C, Swift, SwiftUI, Java, Python, JavaScript, CSS, HTML</p>
+        <p>Frameworks & Libraries: Node.js, React, Express.js</p>
+        <p>Tools & Technologies: Docker, RESTful APIs, SQL, Git, JUnit, JavaMail API</p>
     </section>
 
     <!-- Contact Section -->
@@ -97,3 +107,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
