--- a/index.html
+++ b/index.html
@@ -50,11 +50,16 @@
             document.getElementById("sidebar-menu").classList.toggle("active");
         }
 
-        // Cursor Shadow Effect
-        const cursorShadow = document.querySelector(".cursor-shadow");
-        document.addEventListener("mousemove", (e) => {
-            cursorShadow.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
-            cursorShadow.style.transition = 'transform 0.1s ease-out';
+        // Cursor Shadow Effect Across All Pages
+        document.addEventListener("DOMContentLoaded", function() {
+            const cursorShadow = document.createElement('div');
+            cursorShadow.classList.add('cursor-shadow');
+            document.body.appendChild(cursorShadow);
+
+            document.addEventListener("mousemove", (e) => {
+                cursorShadow.style.transform = `translate(${e.clientX}px, ${e.clientY}px)`;
+                cursorShadow.style.transition = 'transform 0.1s ease-out';
+            });
         });
     </script>
 </body>
