--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- Sidebar Navigation -->
     <nav id="sidebar-menu">
         <ul>
+            <li><a href="index.html">Homepage</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Professional Experience</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -45,6 +46,12 @@
         </div>
     </section>
 
+    <!-- Scroll Down Button -->
+    <div class="scroll-down">
+        <span>Scroll Down</span>
+        <div class="scroll-icon">⬇</div>
+    </div>
+
     <!-- Cursor Shadow Effect -->
     <div class="cursor-shadow"></div>
     
@@ -53,10 +60,11 @@
             document.getElementById("sidebar-menu").classList.toggle("active");
         }
 
-        // Cursor Shadow Effect
+        // Cursor Shadow Effect - White Shadow
         document.addEventListener("DOMContentLoaded", function() {
             const cursorShadow = document.createElement('div');
             cursorShadow.classList.add('cursor-shadow');
+            cursorShadow.style.backgroundColor = 'rgba(255, 255, 255, 0.5)'; // White shadow effect
             document.body.appendChild(cursorShadow);
 
             document.addEventListener("mousemove", (e) => {
