--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiven Patel | Portfolio</title>
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=3">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
-    <!-- Background Cube Animation (White) -->
-    <div class="background-cubes"></div>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="preloader-text">Innovative</div>
+        <div class="preloader-text bold">Problem Solver</div>
+        <div class="preloader-text">Developer</div>
+        <div class="fade-out">shivenhpatel.com</div>
+    </div>
+
+    <!-- Background Cube Animation -->
+    <div class="cube-container">
+        <div class="cube">
+            <div class="face front"></div>
+            <div class="face back"></div>
+            <div class="face left"></div>
+            <div class="face right"></div>
+            <div class="face top"></div>
+            <div class="face bottom"></div>
+        </div>
+    </div>
     
     <!-- Large Styled S. Logo -->
     <div class="logo-large">S.</div>
@@ -32,7 +49,7 @@
         </ul>
     </nav>
 
-    <!-- Hero Section (Ashley-Style) -->
+    <!-- Hero Section -->
     <section id="home">
         <div class="hero-content">
             <h1><strong>Crafting</strong> Innovative <strong>Software Solutions</strong> Today</h1>
@@ -55,9 +72,21 @@
     </div>
     
     <script>
+        // Sidebar Menu Toggle
         function toggleMenu() {
             document.getElementById("sidebar-menu").classList.toggle("active");
         }
+
+        // Preloader Animation
+        document.addEventListener("DOMContentLoaded", function () {
+            const preloader = document.getElementById("preloader");
+            setTimeout(() => {
+                preloader.style.opacity = "0";
+                setTimeout(() => {
+                    preloader.style.display = "none";
+                }, 500);
+            }, 4000); // Preloader duration
+        });
     </script>
 </body>
 </html>
