--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiven Patel | Portfolio</title>
     <link rel="stylesheet" href="style.css?v=3">
+     <!-- FontAwesome for Menu Icon -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
@@ -17,17 +19,7 @@
         <div class="fade-out">shivenhpatel.com</div>
     </div>
 
-    <!-- Background Cube Animation -->
-    <div class="cube-container">
-        <div class="cube">
-            <div class="face front"></div>
-            <div class="face back"></div>
-            <div class="face left"></div>
-            <div class="face right"></div>
-            <div class="face top"></div>
-            <div class="face bottom"></div>
-        </div>
-    </div>
+   
     
     <!-- Large Styled S. Logo -->
     <div class="logo-large">S.</div>
