--- a/about.html
+++ b/about.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | Shiven Patel</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Biography | Shiven Patel</title>
+    <link rel="stylesheet" href="about.css"> <!-- Link to about.css -->
 </head>
 <body>
+    <!-- Sidebar Logo -->
+    <div class="logo">S.</div>
+
     <div class="about-container">
         <div class="about-text">
-            <h1>About Me</h1>
+            <h1><strong>Biography</strong></h1>
             <p>
                 From an early age, I was captivated by technology and its potential to solve real-world problems. 
                 This passion led me to pursue a **Bachelor of Science in Computer Science with a minor in Mathematics** at **Temple University**, 
@@ -33,3 +36,4 @@
     </div>
 </body>
 </html>
+
