--- a/about.html
+++ b/about.html
@@ -15,19 +15,19 @@
             <h1><strong>Biography</strong></h1>
             <p>
                 From an early age, I was captivated by technology and its potential to solve real-world problems. 
-                This passion led me to pursue a **Bachelor of Science in Computer Science with a minor in Mathematics** at **Temple University**, 
-                where I have honed my skills in **software development, web technologies, and problem-solving**.
+                This passion led me to pursue a Bachelor of Science in Computer Science with a minor in Mathematics at Temple University, 
+                where I have honed my skills in software development, web technologies, and problem-solving.
             </p>
             <p>
-                I have hands-on experience in **full-stack development, automation, and cybersecurity**, working with technologies 
-                such as **C, Swift, Java, Python, JavaScript, React, Node.js, and SQL**. My journey has included developing 
+                I have hands-on experience in full-stack development, automation, and cybersecurity, working with technologies 
+                such as C, Swift, Java, Python, JavaScript, React, Node.js, and SQL. My journey has included developing 
                 real-time data visualization dashboards, building cybersecurity simulation platforms, and even contributing to 
-                electronic health record (EHR) systems during my internship at **Mainline Surgical Center**.
+                electronic health record (EHR) systems during my internship at Mainline Surgical Center.
             </p>
             <p>
-                With a strong foundation in software engineering and a curiosity for **emerging fields like AI and cybersecurity**, 
-                I am excited about the opportunities ahead. I aim to work on projects that **push boundaries, create meaningful impact, 
-                and contribute to innovative solutions** in the tech space.
+                With a strong foundation in software engineering and a curiosity for emerging fields like AI and cybersecurity, 
+                I am excited about the opportunities ahead. I aim to work on projects that push boundaries, create meaningful impact, 
+                and contribute to innovative solutions in the tech space.
             </p>
         </div>
         <div class="about-image">
