--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
                 I am excited about the opportunities ahead. I aim to work on projects that push boundaries, create meaningful impact, 
                 and contribute to innovative solutions in the tech space.
             </p>
+            <a href="index.html" class="back-button">← Back to Home</a>
         </div>
         <div class="about-image">
             <img src="IMG_4210.JPG" alt="Shiven Patel">
