--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Sidebar Logo -->
-    <a href="index.html" class="logo">S.</div>
+    <a href="index.html" class="logo">S.</a>
 
     <div class="about-container">
         <div class="about-text">
