--- a/about.html
+++ b/about.html
@@ -35,6 +35,12 @@
             <img src="IMG_4210.JPG" alt="Shiven Patel">
         </div>
     </div>
+    <div id="scroll-trigger"></div>
+
+    <!-- Placeholder for Education Section -->
+    <div id="education-container"></div>
+
+    <script src="about.js"></script>
 </body>
 </html>
 
