--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
     <div id="scroll-trigger"></div>
 
     <!-- Placeholder for Education Section -->
-    <div id="education-container"></div>
+    <div id="education-container">
+    <p style="text-align: center; font-size: 18px; color: #666;">Loading Education Section...</p>
+</div>
 
     <script src="about.js"></script>
 </body>
