--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@
             <p>
                 <strong>Temple University</strong>  
                 <br>
-                **Bachelor of Science in Computer Science (Minor in Mathematics)**  
+                Bachelor of Science in Computer Science (Minor in Mathematics) 
                 <br>
                 CGPA: 3.38 / 4.00  
                 <br>
