--- a/education.html
+++ b/education.html
@@ -38,6 +38,11 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
+     <!-- Scroll Trigger for Experience Section -->
+    <div id="experience-trigger"></div>
+
+    <!-- Placeholder for Experience Section -->
+    <div id="experience-container"></div>
 </body>
 </html>
 
