--- a/experience.html
+++ b/experience.html
@@ -15,12 +15,12 @@
             <h1><strong>Professional Experience</strong></h1>
             <p>
                 <strong>Mainline Surgical Center</strong> – Web Development Intern  
-                <br> **May 2024 – Sep 2024**  
-                <br> ● Designed and implemented responsive websites using **HTML5, CSS3, and JavaScript**, increasing user engagement by 25%.  
-                <br> ● Automated email workflows using **Java**, reducing manual processing time by 50%.  
-                <br> ● Contributed to an **EHR system** for a surgical clinic using **Java and MySQL**, improving data retrieval efficiency by 40%.  
-                <br> ● Developed intuitive user interfaces with **JavaFX**, enhancing usability by 20%.  
-                <br> ● Utilized **Agile methodologies** to improve team productivity by 15%.  
+                <br> May 2024 – Sep 2024 
+                <br> ● Designed and implemented responsive websites using HTML5, CSS3, and JavaScript, increasing user engagement by 25%.  
+                <br> ● Automated email workflows using Java, reducing manual processing time by 50%.  
+                <br> ● Contributed to an EHR system for a surgical clinic using Java and MySQL, improving data retrieval efficiency by 40%.  
+                <br> ● Developed intuitive user interfaces with JavaFX, enhancing usability by 20%.  
+                <br> ● Utilized Agile methodologies to improve team productivity by 15%.  
             </p>
         </div>
         <div class="experience-image">
