--- a/education.html
+++ b/education.html
@@ -38,11 +38,14 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
-     <!-- Scroll Trigger for Experience Section -->
-    <div id="experience-trigger"></div>
+     <div id="scroll-trigger"></div>
 
-    <!-- Placeholder for Experience Section -->
-    <div id="experience-container"></div>
+    <!-- Placeholder for Education Section -->
+    <div id="experience-container">
+    <p style="text-align: center; font-size: 18px; color: #666;">Loading Experience Section...</p>
+</div>
+
+    <script src="education.js"></script>
 </body>
 </html>
 
