--- a/education.html
+++ b/education.html
@@ -38,12 +38,14 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
-     <div id="scroll-trigger"></div>
+    
+   <!-- Scroll Trigger for Experience Section (Move This Above the Placeholder) -->
+    <div id="experience-trigger"></div>
 
-    <!-- Placeholder for Education Section -->
+    <!-- Placeholder for Experience Section -->
     <div id="experience-container">
-    <p style="text-align: center; font-size: 18px; color: #666;">Loading Experience Section...</p>
-</div>
+        <p style="text-align: center; font-size: 18px; color: #666;">Loading Experience Section...</p>
+    </div>
 
     <script src="education.js"></script>
 </body>
