--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
     </div>
     
    <!-- Scroll Trigger for Experience Section (Move This Above the Placeholder) -->
-    <div id="experience-trigger"></div>
+    <div id="scroll-trigger"></div>
 
     <!-- Placeholder for Experience Section -->
     <div id="experience-container">
