--- a/education.html
+++ b/education.html
@@ -38,9 +38,8 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
-    
-   <!-- Scroll Trigger for Experience Section (Move This Above the Placeholder) -->
-    <div id="scroll-trigger"></div>
+    <!-- Correct Scroll Trigger for Experience Section -->
+    <div id="experience-trigger"></div>
 
     <!-- Placeholder for Experience Section -->
     <div id="experience-container">
