--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education | Shiven Patel</title>
+    <title>Education & Experience | Shiven Patel</title>
     <link rel="stylesheet" href="education.css"> 
 </head>
 <body>
@@ -38,15 +38,24 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
-    <!-- Correct Scroll Trigger for Experience Section -->
-    <div id="experience-trigger"></div>
+    <div class="experience-container">
+        <div class="experience-text">
+            <h1><strong>Professional Experience</strong></h1>
+            <p>
+                <strong>Mainline Surgical Center</strong> – Web Development Intern  
+                <br> May 2024 – Sep 2024 
+                <br> ● Designed and implemented responsive websites using HTML5, CSS3, and JavaScript, increasing user engagement by 25%.  
+                <br> ● Automated email workflows using Java, reducing manual processing time by 50%.  
+                <br> ● Contributed to an EHR system for a surgical clinic using Java and MySQL, improving data retrieval efficiency by 40%.  
+                <br> ● Developed intuitive user interfaces with JavaFX, enhancing usability by 20%.  
+                <br> ● Utilized Agile methodologies to improve team productivity by 15%.  
+            </p>
+        </div>
+        <div class="experience-image">
+            <img src="mainline-surgical-logo.png" alt="Work Experience">
+        </div>
+        </div>
 
-    <!-- Placeholder for Experience Section -->
-    <div id="experience-container">
-        <p style="text-align: center; font-size: 18px; color: #666;">Loading Experience Section...</p>
-    </div>
-    
-    <script src="education.js"></script>
 </body>
 </html>
 
