--- a/education.html
+++ b/education.html
@@ -55,6 +55,68 @@
             <img src="mainline-surgical-logo.png" alt="Work Experience">
         </div>
         </div>
+    <!-- Projects Section -->
+<div class="projects-container">
+    <h1><strong>Projects</strong></h1>
+
+    <div class="project">
+        <div class="project-text">
+            <h2>Cyber Security Simulation Platform</h2>
+            <p><strong>Oct 2024 – Jan 2025</strong></p>
+            <p>A hands-on cybersecurity simulation platform that enables users to practice real-world threat scenarios.</p>
+            <ul>
+                <li>Developed using <strong>Python</strong> and <strong>Flask</strong> to simulate <strong>SQL Injection, XSS, and brute-force attacks</strong>.</li>
+                <li>Integrated a <strong>scoring system</strong> to assess user responses and enhance learning.</li>
+                <li>Deployed on <strong>AWS</strong> for scalability and security.</li>
+                <li>Designed an intuitive dashboard with <strong>real-time threat analytics</strong>.</li>
+            </ul>
+        </div>
+        <div class="project-logo">
+            <a href="https://github.com/YOUR_GITHUB_LINK_HERE" target="_blank">
+                <img src="CSSP.jpg" alt="Cyber Security Simulation Platform">
+            </a>
+        </div>
+    </div>
+
+    <div class="project">
+        <div class="project-text">
+            <h2>Real-Time Data Visualization Dashboard</h2>
+            <p><strong>Sep 2023 – April 2024</strong></p>
+            <p>A full-stack web application for real-time data visualization and exploration.</p>
+            <ul>
+                <li>Built using <strong>React, D3.js, Node.js, and MongoDB</strong> for dynamic, interactive visualizations.</li>
+                <li>Optimized for large datasets with <strong>smooth real-time updates via WebSockets</strong>.</li>
+                <li>Deployed on <strong>Heroku</strong> and <strong>AWS</strong> to ensure scalability and high availability.</li>
+                <li>Features <strong>interactive UI</strong> to enhance user engagement and data analysis.</li>
+            </ul>
+        </div>
+        <div class="project-logo">
+            <a href="https://github.com/Shiven14/Real-Time-Data-Visualization-Dashboard-" target="_blank">
+                <img src="RTDVD.jpg" alt="Real-Time Data Visualization Dashboard">
+            </a>
+        </div>
+    </div>
+
+    <div class="project">
+        <div class="project-text">
+            <h2>VerboVista - iOS Development</h2>
+            <p><strong>Aug 2022 – Jan 2023</strong></p>
+            <p>An iOS language learning app with AR-based translation and real-time speech recognition.</p>
+            <ul>
+                <li>Developed in <strong>Swift</strong> using <strong>ARKit</strong> for immersive language learning experiences.</li>
+                <li>Integrated <strong>Google Cloud APIs</strong> for real-time translation and speech recognition.</li>
+                <li>Used <strong>Core Data</strong> for efficient local storage of user progress and vocabulary.</li>
+                <li>Designed a <strong>user-friendly UI</strong> with SwiftUI for enhanced accessibility and responsiveness.</li>
+            </ul>
+        </div>
+        <div class="project-logo">
+            <a href="https://github.com/Shiven14/VerboVista" target="_blank">
+                <img src="vv.jpg" alt="VerboVista iOS Development">
+            </a>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
