--- a/index.html
+++ b/index.html
@@ -108,34 +108,46 @@
             }, delay);
         });
         // Polygon Animation (Three.js)
-        document.addEventListener("DOMContentLoaded", function () {
-            const polygonContainer = document.querySelector(".polygon-container");
+     // Polygon Background Animation (Three.js)
+document.addEventListener("DOMContentLoaded", function () {
+    const polygonContainer = document.querySelector(".polygon-container");
 
-            if (polygonContainer) {
-                const scene = new THREE.Scene();
-                const camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000);
-                const renderer = new THREE.WebGLRenderer({ alpha: true });
+    if (polygonContainer) {
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 8; // Adjusted to center properly
 
-                renderer.setSize(300, 300);
-                polygonContainer.appendChild(renderer.domElement);
+        // Renderer setup
+        const renderer = new THREE.WebGLRenderer({ alpha: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        polygonContainer.appendChild(renderer.domElement);
 
-                const geometry = new THREE.IcosahedronGeometry(3, 1);
-                const material = new THREE.MeshBasicMaterial({ wireframe: true, color: 0xffffff });
-                const polygon = new THREE.Mesh(geometry, material);
+        // Create polygon geometry
+        const geometry = new THREE.IcosahedronGeometry(3, 1);
+        const material = new THREE.MeshBasicMaterial({ wireframe: true, color: 0xffffff });
+        const polygon = new THREE.Mesh(geometry, material);
+        scene.add(polygon);
 
-                scene.add(polygon);
-                camera.position.z = 10;
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            polygon.rotation.x += 0.003;
+            polygon.rotation.y += 0.003;
+            renderer.render(scene, camera);
+        }
 
-                function animate() {
-                    requestAnimationFrame(animate);
-                    polygon.rotation.x += 0.005;
-                    polygon.rotation.y += 0.005;
-                    renderer.render(scene, camera);
-                }
+        animate();
 
-                animate();
-            }
+        // Adjust canvas on window resize
+        window.addEventListener("resize", () => {
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
         });
+    }
+});
+
+        
     </script>
 </body>
 </html>
