--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ document.addEventListener("DOMContentLoaded", function () {
     if (polygonContainer) {
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.z = 8; // Adjusted to center properly
+        camera.position.z = 8;
 
         // Renderer setup
         const renderer = new THREE.WebGLRenderer({ alpha: true });
@@ -123,10 +123,13 @@ document.addEventListener("DOMContentLoaded", function () {
         polygonContainer.appendChild(renderer.domElement);
 
         // Create polygon geometry
-        const geometry = new THREE.IcosahedronGeometry(3, 1);
+        const geometry = new THREE.IcosahedronGeometry(4, 1);
         const material = new THREE.MeshBasicMaterial({ wireframe: true, color: 0xffffff });
         const polygon = new THREE.Mesh(geometry, material);
         scene.add(polygon);
+
+        // Center Polygon
+        polygon.position.set(0, 0, 0);
 
         // Animation loop
         function animate() {
@@ -147,7 +150,6 @@ document.addEventListener("DOMContentLoaded", function () {
     }
 });
 
-        
     </script>
 </body>
 </html>
