--- a/education.html
+++ b/education.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
     <title>Education & Experience | Shiven Patel</title>
     <link rel="stylesheet" href="education.css"> 
 </head>
@@ -121,124 +119,16 @@
 <!-- Skills Section -->
 <div class="skills-container">
     <h1><strong>Skills</strong></h1>
-    <div class="skills-grid">
-        <!-- Programming Languages -->
-        <div class="skill">
-            <i class="fas fa-code"></i>
-            <p>C</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-swift"></i>
-            <p>Swift</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-java"></i>
-            <p>Java</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-python"></i>
-            <p>Python</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-js"></i>
-            <p>JavaScript</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-css3-alt"></i>
-            <p>CSS</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-html5"></i>
-            <p>HTML</p>
-        </div>
-
-        <!-- Web Development -->
-        <div class="skill">
-            <i class="fas fa-laptop-code"></i>
-            <p>Frontend & Backend Dev</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-mobile-alt"></i>
-            <p>Responsive Design</p>
-        </div>
-
-        <!-- Software Development -->
-        <div class="skill">
-            <i class="fas fa-cogs"></i>
-            <p>Algorithms & Data Structures</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-robot"></i>
-            <p>Automation</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-file-code"></i>
-            <p>File Handling</p>
-        </div>
-
-        <!-- Frameworks & Libraries -->
-        <div class="skill">
-            <i class="fab fa-node-js"></i>
-            <p>Node.js</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-react"></i>
-            <p>React</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-server"></i>
-            <p>Express.js</p>
-        </div>
-
-        <!-- Tools & Technologies -->
-        <div class="skill">
-            <i class="fab fa-docker"></i>
-            <p>Docker</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-plug"></i>
-            <p>RESTful APIs</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-database"></i>
-            <p>SQL</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-git-alt"></i>
-            <p>Git</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-vial"></i>
-            <p>JUnit</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-envelope"></i>
-            <p>JavaMail API</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-file-excel"></i>
-            <p>Apache POI</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-apple"></i>
-            <p>Xcode</p>
-        </div>
-
-        <!-- Version Control & Collaboration -->
-        <div class="skill">
-            <i class="fab fa-github"></i>
-            <p>GitHub</p>
-        </div>
-        <div class="skill">
-            <i class="fab fa-gitlab"></i>
-            <p>GitLab</p>
-        </div>
-        <div class="skill">
-            <i class="fas fa-project-diagram"></i>
-            <p>Agile & Scrum</p>
-        </div>
-    </div>
+    <ul class="skills-list">
+        <li><strong>Programming Languages:</strong> C, Swift, SwiftUI, Java, Python, JavaScript, CSS, HTML</li>
+        <li><strong>Web Development:</strong> Frontend and Backend Development, Cross-browser Compatibility, Responsive Design</li>
+        <li><strong>Software Development:</strong> Algorithms, Data Structures, OOP, Automation, File Handling</li>
+        <li><strong>Frameworks & Libraries:</strong> Node.js, React, Express.js</li>
+        <li><strong>Tools & Technologies:</strong> Docker, RESTful APIs, SQL, Git, JUnit, JavaMail API, Apache POI, Xcode</li>
+        <li><strong>Version Control & Collaboration:</strong> Agile Methodologies, Scrum, GitHub, GitLab</li>
+    </ul>
 </div>
+
 
 
 </body>
