--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Shiven Patel</title>
     <link rel="stylesheet" href="contact.css">
+    <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST">
+
 </head>
 <body>
 
@@ -18,10 +20,10 @@
 
         <!-- Contact Info -->
         <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:youremail@example.com">shiven9019@gmail.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i> Location: Philadelphia, PA</p>
             <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Shiven14" target="_blank">Shiven14</a></p>
-            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
+            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">LinkedIn Profile</a></p>
         </div>
 
         <!-- Contact Form -->
