--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Shiven Patel</title>
     <link rel="stylesheet" href="contact.css">
-    <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST">
+  
 
 </head>
 <body>
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Contact Form -->
-        <form class="contact-form">
+          <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
             <textarea placeholder="Your Message" required></textarea>
