--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,17 @@
         </div>
 
         <!-- Contact Form -->
-          <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+         <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
+    <input type="hidden" name="_template" value="table"> <!-- Removes FormSubmit branding -->
+    <input type="hidden" name="_next" value="https://yourwebsite.com/thankyou.html"> <!-- Redirects after submission -->
+
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    
+    <button type="submit">Send Message</button>
+</form>
+
     </div>
 
     <script src="contact.js"></script>
