--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <!-- Contact Form -->
          <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
     <input type="hidden" name="_template" value="table"> <!-- Removes FormSubmit branding -->
-    <input type="hidden" name="_next" value="https://yourwebsite.com/thankyou.html"> <!-- Redirects after submission -->
+    <input type="hidden" name="_next" value="https://www.shivenhpatel.com/thankyou.html"> <!-- Redirects after submission -->
 
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
