--- a/education.html
+++ b/education.html
@@ -128,6 +128,32 @@
         <li><strong>Version Control & Collaboration:</strong> Agile Methodologies, Scrum, GitHub, GitLab</li>
     </ul>
 </div>
+  <!-- Contact Section -->
+    <div class="contact-container">
+        <h1>Contact Me</h1>
+        <p>Interested in working together? Have a question? Reach out below!</p>
+
+        <!-- Contact Info -->
+        <div class="contact-info">
+            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:youremail@example.com">shiven9019@gmail.com</a></p>
+            <p><i class="fas fa-map-marker-alt"></i> Location: Philadelphia, PA</p>
+            <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Shiven14" target="_blank">Shiven14</a></p>
+            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">LinkedIn Profile</a></p>
+        </div>
+
+        <!-- Contact Form -->
+         <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
+    <input type="hidden" name="_template" value="table"> <!-- Removes FormSubmit branding -->
+    <input type="hidden" name="_next" value="https://www.shivenhpatel.com/thankyou.html"> <!-- Redirects after submission -->
+
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    
+    <button type="submit">Send Message</button>
+</form>
+
+    </div>
+
 </body>
 </html>
-
