--- a/thankyou.html
+++ b/thankyou.html
@@ -3,16 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank You</title>
+    <title>Thank You | Shiven Patel</title>
     <link rel="stylesheet" href="thankyou.css">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+
+    <style>
+        /* General Styling */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #121212;
+            color: white;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Container */
+        .thank-you-container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.2);
+            animation: fadeIn 1.5s ease-in-out;
+            max-width: 500px;
+        }
+
+        /* Animated Checkmark */
+        .checkmark {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            background: #4CAF50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto 20px;
+        }
+
+        .checkmark::after {
+            content: '✔';
+            font-size: 40px;
+            color: white;
+        }
+
+        /* Text */
+        .thank-you-container h1 {
+            font-size: 30px;
+            font-weight: 600;
+        }
+
+        .thank-you-container p {
+            font-size: 18px;
+            margin: 10px 0;
+            opacity: 0.8;
+        }
+
+        /* Button */
+        .home-button {
+            display: inline-block;
+            padding: 12px 24px;
+            background: #ff9800;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 5px;
+            margin-top: 20px;
+            transition: 0.3s;
+        }
+
+        .home-button:hover {
+            background: #e68900;
+        }
+
+        /* Fade-in Animation */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+
+    <!-- Auto-Redirect After 5 Seconds -->
+    <script>
+        setTimeout(() => {
+            window.location.href = "index.html"; // Change to your home page URL
+        }, 5000);
+    </script>
+
 </head>
 <body>
 
     <div class="thank-you-container">
+        <div class="checkmark"></div>
         <h1>Thank You!</h1>
-        <p>Your message has been sent successfully. I'll get back to you soon!</p>
-        <a href="index.html" class="btn">Return Home</a>
+        <p>Your message has been successfully sent. I'll get back to you soon!</p>
+        <a href="index.html" class="home-button">Return Home</a>
+        <p style="font-size: 14px; opacity: 0.7;">Redirecting in 5 seconds...</p>
     </div>
 
 </body>
 </html>
+
