--- a/education.html
+++ b/education.html
@@ -135,11 +135,16 @@
 
         <!-- Contact Info -->
         <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:youremail@example.com">shiven9019@gmail.com</a></p>
+            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:shiven9019@gmail.com.com">shiven9019@gmail.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i> Location: Philadelphia, PA</p>
             <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Shiven14" target="_blank">Shiven14</a></p>
             <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">LinkedIn Profile</a></p>
         </div>
+         <!-- Resume Download Link -->
+<div class="resume-download">
+    <p><strong>Download My Resume:</strong></p>
+    <a href="Copy of Shiven_Patel_CS_Resume.pdf" download class="resume-button">Download PDF</a>
+</div>
 
         <!-- Contact Form -->
          <form action="https://formsubmit.co/shiven9019@gmail.com" method="POST" class="contact-form">
