--- a/education.html
+++ b/education.html
@@ -135,7 +135,7 @@
 
         <!-- Contact Info -->
         <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:shiven9019@gmail.com.com">shiven9019@gmail.com</a></p>
+            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:shiven9019@gmail.com.">shiven9019@gmail.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i> Location: Philadelphia, PA</p>
             <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/Shiven14" target="_blank">Shiven14</a></p>
             <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/shiven-patel-903202244/" target="_blank">LinkedIn Profile</a></p>
