--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                Explore my projects, skills, and journey as I turn ideas into reality.
             </p>
             <div class="buttons">
-                <a href="about.html" class="btn btn-primary">About Me <span class="arrow">→</span></a>
+                <a href="education.html" class="btn btn-primary">About Me <span class="arrow">→</span></a>
             </div>
         </div>
     </section>
