--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Shiven Patel | Portfolio</title>
     <link rel="stylesheet" href="style.css?v=3">
     <!-- FontAwesome for Menu Icon -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
@@ -23,7 +23,7 @@
     
     <!-- Sidebar Navigation Toggle -->
     <div class="menu-toggle" id="menu-toggle">
-        <i class="fas fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
     </div>
     
     <!-- Sidebar Navigation -->
