--- a/menu.html
+++ b/menu.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburger Menu</title>
+    <title>Fullscreen Menu</title>
     <link rel="stylesheet" href="menu.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
 </head>
 <body>
 
-    <!-- Hamburger Menu Button -->
+    <!-- Menu Toggle Button -->
     <div class="menu-toggle" id="menu-toggle">
         <i class="fas fa-bars"></i>
     </div>
 
-    <!-- Sidebar Menu -->
-    <nav id="sidebar-menu">
+    <!-- Fullscreen Menu -->
+    <div id="fullscreen-menu">
         <span class="close-menu" id="close-menu">✖</span>
         <ul>
             <li><a href="index.html">Homepage</a></li>
@@ -25,9 +25,10 @@
             <li><a href="education.html#skills">Skills</a></li>
             <li><a href="education.html#contact">Contact</a></li>
         </ul>
-    </nav>
+    </div>
 
     <script src="menu.js"></script>
 
 </body>
 </html>
+
