--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
     <!-- Sidebar Logo -->
     <a href="index.html" class="logo">S.</a>
     
-<div class="about-container">
+<div class="about-container"  id="about">
         <div class="about-text">
             <h1><strong>Biography</strong></h1>
             <p>
@@ -36,7 +36,7 @@
         </div>
     </div>
     
-    <div class="education-container">
+    <div class="education-container" id="education">
         <div class="education-text">
             <h1><strong>Education</strong></h1>
             <p>
@@ -64,7 +64,7 @@
             <img src="temple_university.jpg" alt="Temple University">
         </div>
     </div>
-    <div class="experience-container">
+    <div class="experience-container" id="experience">
         <div class="experience-text">
             <h1><strong>Professional Experience</strong></h1>
             <p>
@@ -82,7 +82,7 @@
         </div>
         </div>
     <!-- Projects Section -->
-<div class="projects-container">
+<div class="projects-container" id="projects">
     <h1><strong>Projects</strong></h1>
 
     <div class="project">
@@ -143,7 +143,7 @@
     </div>
 </div>
 <!-- Skills Section -->
-<div class="skills-container">
+<div class="skills-container" id="skills">
     <h1><strong>Skills</strong></h1>
     <ul class="skills-list">
         <li><strong>Programming Languages:</strong> C, Swift, SwiftUI, Java, Python, JavaScript, CSS, HTML</li>
@@ -155,7 +155,7 @@
     </ul>
 </div>
   <!-- Contact Section -->
-    <div class="contact-container">
+    <div class="contact-container" id="contact">
         <h1>Contact Me</h1>
         <p>Interested in working together? Have a question? Reach out below!</p>
 
