--- a/menu.html
+++ b/menu.html
@@ -17,12 +17,14 @@
     <div id="fullscreen-menu">
         <span class="close-menu" id="close-menu">✖</span>
         <ul>
-            <li><a href="index.html">Homepage</a></li>
-            <li><a href="education.html#education">Education</a></li>
-            <li><a href="education.html#experience">Professional Experience</a></li>
-            <li><a href="education.html#projects">Projects</a></li>
-            <li><a href="education.html#skills">Skills</a></li>
-            <li><a href="education.html#contact">Contact</a></li>
+           <ul>
+    <li><a href="education.html#about">About</a></li>
+    <li><a href="education.html#education">Education</a></li>
+    <li><a href="education.html#experience">Professional Experience</a></li>
+    <li><a href="education.html#projects">Projects</a></li>
+    <li><a href="education.html#skills">Skills</a></li>
+    <li><a href="education.html#contact">Contact</a></li>
+
         </ul>
     </div>
 
